[project]
name = "openclaw-cli"
version = "0.1.0"
description = "CLI utilities for OpenClaw — tail logs, inspect sessions, and more."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "Dan" }]
keywords = ["openclaw", "cli", "logs", "session"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "click>=8.1",
    "rich>=13.0",
]

[project.scripts]
ocli = "openclaw_cli.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/openclaw_cli"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
